--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       customPDF('canvas_wrapper', './sample.pdf', './pdf.worker.js');
     });
   </script>
+  <style>
+    #canvas_wrapper { width: 50%; height: 50%; overflow: auto; }
+    #canvas_wrapper canvas { width: 100%; height: 100% }
+  </style>
 </head>
 <body>
   <div id="canvas_wrapper"></div>
