--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     });
   </script>
   <style>
-    #canvas_wrapper { width: 50%; height: 50%; overflow: auto; }
-    #canvas_wrapper canvas { width: 100%; height: 100% }
+    #canvas_wrapper { width: 25%; height: 70%; overflow: auto; margin: auto; border: solid 1px black; }
+    #canvas_wrapper canvas { width: 100%; }
   </style>
 </head>
 <body>
