--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     });
   </script>
   <style>
-    #canvas_wrapper { width: 25%; height: 70%; overflow: auto; margin: auto; border: solid 1px black; }
-    #canvas_wrapper canvas { width: 100%; }
+    #canvas_wrapper { width: 40%; height: 80%; overflow: auto; margin: auto; border: solid 1px #000000; }
+    #canvas_wrapper canvas { width: calc(100% - 10px); margin:4px; border: solid 1px #00000080;}
   </style>
 </head>
 <body>
